syntax = "proto3";

package api.property.v1;

option go_package = "hk591/api/property/v1;v1";
option java_multiple_files = true;
option java_package = "api.property.v1";

service UserSvc {
	rpc GetUserByUserId (GetUserRequest) returns (GetUserReply);
	rpc GetUserByMobile (GetUserRequest) returns (GetUserReply);
	rpc GetPaginatedUsers (ListUserRequest) returns (ListUserReply);
}

message User {
	int64 user_id = 1;
	string mobile = 2;
	string username = 3;
}

message GetUserRequest {
	int64 user_id = 1;
	string mobile = 2;
}

message GetUserReply {
	User data = 1;
	int64 code = 2;
	string msg = 3;
	string timestamp = 4;
}

message ListUserRequest {
	int64 page = 1;
	int64 page_size = 2;
}

message Meta {
	int64 total = 1;
	int64 current_page = 2;
	int64 per_page = 3;
	int64 has_next = 4;
}

message Data {
	repeated User data = 1;
	Meta meta = 2;
}

message ListUserReply {
	int64 code = 1;
	string msg = 2;
	string timestamp = 3;
	Data data = 4;
}